<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">旅行日记</string>
    <string name="action_settings">设置</string>
    <string name="photo_name">照片名称</string>
    <string name="title_activity_pic_detail">添加详情</string>
    <string name="save_btn">保存</string>
    <string name="description_title">添加描述</string>
    <string name="title_activity_photo_list">照片列表</string>
    <string name="title_activity_map_main">主页</string>
    <string name="take_photo">拍照</string>
    <string name="to_trip_list">游记</string>
    <string name="to_setting_btn">设置</string>
    <string name="title_activity_trip_list">游记列表</string>
    <string name="hello_world">Hello world!</string>
    <string name="to_new_trip">新旅程</string>
    <string name="title_activity_new_trip">新建旅程</string>
    <string name="string_newtrip_tripname">旅程名称</string>
    <string name="string_newtrip_starttime">开始时间</string>
    <string name="string_newtrip_endtime">结束时间</string>
    <string name="string_newtrip_keywords">关键词</string>
    <string name="title_activity_trip_show">旅程详情</string>
    <string name="string_end_trip">结束旅程</string>
    <string name="title_activity_test">Test</string>
    <string name="menu_btn_search">搜索</string>
    <string name="menu_btn_new">新建</string>
    <string name="menu_btn_camera">拍照</string>
    <string name="title_activity_tab_listener">TabListener</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_main">旅行日记</string>
    <string name="title_activity_dummy_fragment">DummyFragment</string>
    <string name="title_activity_explore">探索</string>
    <string name="psa_caption_key">关键字</string>
    <string name="voice_recognize_stop">停止</string>
    <string name="voice_recognize_start">开始</string>

</resources>
